--- a/spring-chap8-ec/build.gradle
+++ b/spring-chap8-ec/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.webjars:webjars-locator-core'
+	runtimeOnly("org.webjars:jquery:3.7.1")
+	runtimeOnly("org.webjars:bootstrap:5.3.5")
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
