--- a/spring-kadai6-jpa-crud-RE/build.gradle
+++ b/spring-kadai6-jpa-crud-RE/build.gradle
@@ -20,11 +20,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'org.webjars:webjars-locator-core' //バージョンを記述しなくても動かせるもの
-    runtimeOnly("org.webjars:jquery:3.7.1") //dependeciesにjqueryとBootdtrapを追加
-    runtimeOnly("org.webjars:bootstrap:5.3.5")
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
